# erpnext_ec

./: README  README.md  dev_tutorial.txt  erpnext_ec.rar  pyproject.toml  requirements.txt  run_imports.sh  run_patch_custom_fields.sh  run_patches.sh  set-production.txt  setup.py  wsl-tuto.txt
erpnext_ec/: hooks.py  install.py  modules.txt  patches.txt
erpnext_ec/config/: desktop.py  erpnext_ec.py
erpnext_ec/fixtures/: account.json  branch.json  company.json  customer.json  delivery_note.json  delivery_stop.json  email_account.json  email_domain.json  mode_of_payment.json  purchase_invoice.json  purchase_receipt.json  regional_settings_ec.json  sales_invoice.json  sri_environment.json  sri_establishment.json  sri_external_establishment.json  sri_ptoemi.json  sri_type_doc.json  sri_type_id.json  supplier.json
erpnext_ec/fixtures/excluded/: email_account.json  email_domain.json  party_type.json  sri_sequence.json
erpnext_ec/fixtures/excluded_tmp/: email_account.json  purchase_invoice.json  sri_ptoemi.json
erpnext_ec/fixtures/specials/: account_custom.json  account_insert.json  account_update.json  sri_ptoemi.json  (+1 more)
erpnext_ec/translations/: es.csv
erpnext_ec/utilities/: doc_builder_cre.py  doc_builder_fac.py  doc_builder_grs.py  doc_builder_liq.py  doc_builder_ncr.py  doc_builder_nde.py  doc_builder_tools.py  doc_render_tools.py  doc_validator.py  email_tool.py  encryption.py  import_tools.py  settings_tools.py  signature_tool.py  sri_ws.py  test.py  tools.py  xades_tool_v1.py  xades_tool_v2.py  xades_tool_v3.py  xades_tool_v4.py  xadessri.py  xml_builder.py
(+141 files in other folders)
