[project]
name = "erpnext_ec"
authors = [
    { name = "BeebTech", email = "ronald.chonillo@gmail.com"}
]
description = "Erpnext Ecuador"
requires-python = ">=3.6"
readme = "README.md"
dynamic = ["version"]
dependencies = [
    # "frappe~=15.0.0" # Installed and managed by bench.
]

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

# These dependencies are only installed when developer mode is enabled
[tool.bench.dev-dependencies]
# package_name = "~=1.1.0"

[tool.bench.frappe-dependencies]
frappe = ">=13.10.0,<16.0.0"